<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controller"
    android:background="@color/white">

    <TableLayout
        android:id="@+id/loginView"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_marginTop="60dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/userNamePrompt"
            android:enabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/userNamePrompt"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/userNameField"
            android:enabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:maxLines="1"/>

        <TextView
            android:id="@+id/userPasswordPrompt"
            android:enabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/userPasswordPrompt"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/userPasswordField"
            android:enabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:maxLines="1"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/loginButton"
            android:enabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/logIn"
            android:textSize="25sp"/>

        <TableRow>
        <Button
            android:id="@+id/newAccountButton"
            android:enabled="true"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:text="@string/createNewAccount"
            android:textSize="15sp"/>
        </TableRow>

    </TableLayout>

    <TableLayout
        android:id="@+id/newUserView"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_marginTop="60dp"
        android:visibility="invisible">

        <TextView
            android:id="@+id/createNewAccount"
            android:enabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="10dp"
            android:text="@string/createNewAccount"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/newUserNamePrompt"
            android:enabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/userNamePrompt"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/newUserNameField"
            android:enabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:maxLines="1"/>

        <TextView
            android:id="@+id/newUserPasswordPrompt"
            android:enabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/userPasswordPrompt"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/newUserPasswordField"
            android:enabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:maxLines="1"
            android:inputType="textPassword"/>

        <TextView
            android:id="@+id/confirmUserPasswordPrompt"
            android:enabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/confirmUserPasswordPrompt"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/confirmUserPasswordField"
            android:enabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:maxLines="1"
            android:inputType="textPassword"/>

        <TableRow>
            <TextView
                android:id="@+id/goalWeightPrompt"
                android:enabled="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/goalWeightPrompt"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/goalWeightField"
                android:enabled="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="20sp"
                android:maxLines="1"
                android:inputType="numberDecimal"/>
        </TableRow>

        <Button
            android:id="@+id/createNewAccountButton"
            android:enabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/createAccount"
            android:textSize="25sp"/>
    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>